Finished links and images

--- a/Foundations/odin-links-and-images/index.html
+++ b/Foundations/odin-links-and-images/index.html
@@ -12,9 +12,11 @@
         <!-- The link above is an absolute link -->
         <!-- protocol://domain/path -->
 
-        <a href="about.html">About Page</a>
+        <a href="./pages/about.html">About Page</a>
         <!-- The link above is a relative link -->
         <!-- refers to a page in the same domain or website -->
+
+        <img src="images/dog.jpg" alt="Charle's Glory">
 
         </a>
     </body>
