Add css files to recipes project to practice basic styling

--- a/Foundations/odin-recipes/index.html
+++ b/Foundations/odin-recipes/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
         <title>Recipes Webpage</title>
     </head>
 
     <body>
-        <li><a href="recipes/scrambledeggs.html">Scrambled Eggs</a></li>
-        <li><a href="recipes/oliveyogurt.html">Olive Yogurt</a></li>
+        <div class="menu">
+            <p>Recipes Webpage</p>
+        </div>
+        <h1>Recipes List</h1>
+        <div class="container">
+            <li><a href="recipes/scrambledeggs.html">Scrambled Eggs</a></li>
+            <li><a href="recipes/oliveyogurt.html">Olive Yogurt</a></li>
+        </div>
     </body>
 
 </html>
