--- a/Foundations/odin-recipes/recipes/scrambledeggs.html
+++ b/Foundations/odin-recipes/recipes/scrambledeggs.html
@@ -2,25 +2,28 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="styleegg.css">
         <title>Recipe</title>
     </head>
 
     <body>
         <h1>Chef John's Summer Scrambled Eggs</h1>
         <img src="images/dish.jpg">
-        <h3>Description: </h3>
-        <p>
-            Good scrambled eggs (it's what the website says, haven't tried it tho)
-        </p>
-        <ul>
-            <li>3 large eggs</li>
-            <li>1 pinch red pepper flakes</li>
-            <li>9 cherry tomatoes, halved</li>
-            <li>2 tablespoons crumbled feta cheese</li>
-            <li>1 tablespoon very thinly sliced fresh basil leaves</li>
-            <li>olive oil</li>
-            <li>1 pinch sea salt</li>
-        </ul>
+        <div class="description">
+            <h3>Description: </h3>
+            <p>
+                Good scrambled eggs (it's what the website says, haven't tried it tho)
+            </p>
+            <ul>
+                <li>3 large eggs</li>
+                <li>1 pinch red pepper flakes</li>
+                <li>9 cherry tomatoes, halved</li>
+                <li>2 tablespoons crumbled feta cheese</li>
+                <li>1 tablespoon very thinly sliced fresh basil leaves</li>
+                <li>olive oil</li>
+                <li>1 pinch sea salt</li>
+            </ul>
+        </div>
         <h3>Steps</h3>
         <ol>
             <li>Beat eggs and red pepper flakes together in a bowl.
