--- a/Fullstack JavaScript/intermediate-html-and-css/tables/animals-table.html
+++ b/Fullstack JavaScript/intermediate-html-and-css/tables/animals-table.html
@@ -7,7 +7,8 @@
     <link href="minimal-table.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Animals table</h1>
+    
+    <!-- <h1>Animals table</h1>
 
     <table>
       <tr>
@@ -33,8 +34,35 @@
       <tr>
         <td>Rooster</td>
       </tr>
-    </table>
+    </table> -->
 
+    <h1>Animals table</h1>
+
+    <table>
+      <tr>
+        <th colspan="2">Animals</th>
+      </tr>
+      <tr>
+        <th colspan="2">Hippopotamus</th>
+      </tr>
+      <tr>
+        <th rowspan="2">Horse</th>
+        <td>Mare</td>
+      </tr>
+      <tr>
+        <td>Stallion</td>
+      </tr>
+      <tr>
+        <th colspan="2">Crocodile</th>
+      </tr>
+      <tr>
+        <th rowspan="2">Chicken</th>
+        <td>Hen</td>
+      </tr>
+      <tr>
+        <td>Rooster</td>
+      </tr>
+    </table>
 
   </body>
 </html>
