--- a/Fullstack JavaScript/intermediate-html-and-css/tables/nesting-tables.html
+++ b/Fullstack JavaScript/intermediate-html-and-css/tables/nesting-tables.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>My spending record</title>
+    <title>Nesting Tables</title>
     <link href="minimal-table.css" rel="stylesheet" type="text/css">
     <style>
     </style>
