--- a/Fullstack JavaScript/intermediate-html-and-css/tables/planets-table.html
+++ b/Fullstack JavaScript/intermediate-html-and-css/tables/planets-table.html
@@ -12,6 +12,11 @@
     <table>
         <caption>Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).</caption>
 
+        <colgroup>
+            <col span="2">
+            <col style="border: 2px solid black">
+        </colgroup>
+
         <thead>
             <tr>
                 <td colspan="2">&nbsp;</td>
@@ -130,6 +135,7 @@
             </tr>
             <tr>
                 <th colspan="2">Dwarf planets</th>
+                <th>Pluto</th>
                 <td>0.0146</td>
                 <td>2,370</td>
                 <td>2095</td>
