--- a/Fullstack JavaScript/intermediate-html-and-css/forms/form-element.html
+++ b/Fullstack JavaScript/intermediate-html-and-css/forms/form-element.html
@@ -7,6 +7,9 @@
     <title>Form Element</title>
 </head>
 <body>
-    
+    <form action="http://httpbin.org/post" method="post">
+        <label for="first_name">First Name: </label>
+        <input type="text" id="first_name" name="first_name" placeholder="Type">
+    </form>
 </body>
 </html>
