--- a/Fullstack JavaScript/intermediate-html-and-css/forms/form-element.html
+++ b/Fullstack JavaScript/intermediate-html-and-css/forms/form-element.html
@@ -4,12 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="script.js" defer></script>
     <title>Form Element</title>
 </head>
 <body>
     <form action="http://httpbin.org/post" method="post">
-        <label for="first_name">First Name: </label>
-        <input type="text" id="first_name" name="first_name" placeholder="Type">
+        <div>
+            <label for="first_name">First Name: </label>
+            <input type="text" id="first_name" name="first_name" placeholder="Bob">
+        </div>
+        <div>
+            <label for="last_name">Last Name: </label>
+            <input type="text" id="last_name" name="last_name" placeholder="Stronghold">
+        </div>
+        <div>
+            <label for="age">Age: </label>
+            <input type="text" id="age" name="age" placeholder="21">
+        </div>
+
+        <button type="submit">Submit</button>
+
     </form>
+
+    <div>
+        <label for="username">What's your name?</label>
+        <input type="text"id="username">
+        <button class="greet-btn">Greet Me</button>
+    </div>
+      
+    <h1 class="greeting"></h1>
+
 </body>
 </html>
