--- a/Fullstack JavaScript/intermediate-html-and-css/forms/form-element.html
+++ b/Fullstack JavaScript/intermediate-html-and-css/forms/form-element.html
@@ -19,12 +19,24 @@
         </div>
         <div>
             <label for="age">Age: </label>
-            <input type="text" id="age" name="age" placeholder="21">
+            <input type="number" id="age" name="age" placeholder="21">
+        </div>
+
+        <div>
+            <label for="user_email">Email Address:</label>
+            <input type="email" id="user_email" name="email" placeholder="you@example.com">
+        </div>
+
+        <div>
+            <label for="user_password">Password:</label>
+            <input type="password" id="user_password" name="password">
         </div>
 
         <button type="submit">Submit</button>
 
     </form>
+
+    
 
     <div>
         <label for="username">What's your name?</label>
@@ -33,6 +45,8 @@
     </div>
       
     <h1 class="greeting"></h1>
+
+
 
 </body>
 </html>
