Commit dropdown and text area elements

--- a/Fullstack JavaScript/intermediate-html-and-css/forms/form-element.html
+++ b/Fullstack JavaScript/intermediate-html-and-css/forms/form-element.html
@@ -36,7 +36,32 @@
 
     </form>
 
+    <textarea rows="20" cols="60"></textarea>
+    <div>
+        <select name="Car">
+            <option value="mercedes">Mercedes</option>
+            <option value="tesla">Tesla</option>
+            <option value="volvo">Volvo</option>
+            <option value="bmw">BMW</option>
+            <option value="mini">Mini</option>
+            <option value="ford">Ford</option>
+        </select>
+    </div>
     
+    <div>
+        <select name="fashion">
+            <optgroup label="Clothing">
+                <option value="t_shirt">T-Shirts</option>
+                <option value="sweater">Sweaters</option>
+                <option value="coats">Coats</option>
+            </optgroup>
+            <optgroup label="Foot Wear">
+                <option value="sneakers">Sneakers</option>
+                <option value="boots">Boots</option>
+                <option value="sandals">Sandals</option>
+            </optgroup>
+        </select>
+    </div>
 
     <div>
         <label for="username">What's your name?</label>
