--- a/Fullstack JavaScript/intermediate-html-and-css/forms/form-element.html
+++ b/Fullstack JavaScript/intermediate-html-and-css/forms/form-element.html
@@ -47,7 +47,7 @@
             <option value="ford">Ford</option>
         </select>
     </div>
-    
+
     <div>
         <select name="fashion">
             <optgroup label="Clothing">
@@ -61,6 +61,17 @@
                 <option value="sandals">Sandals</option>
             </optgroup>
         </select>
+    </div>
+
+    <h1>Ticket Type</h1>
+    
+    <div>
+        <input type="radio" id="child" name="ticket_type" value="child">
+        <label for="child">Child</label>
+        <input type="radio" id="adult" name="ticket_type" value="adult">
+        <label for="adult">Adult</label>
+        <input type="radio" id="senior" name="ticket_type" value="senior">
+        <label for="senior">Senior</label>
     </div>
 
     <div>
