--- a/Fullstack JavaScript/intermediate-html-and-css/forms/form-element.html
+++ b/Fullstack JavaScript/intermediate-html-and-css/forms/form-element.html
@@ -64,7 +64,7 @@
     </div>
 
     <h1>Ticket Type</h1>
-    
+
     <div>
         <input type="radio" id="child" name="ticket_type" value="child">
         <label for="child">Child</label>
@@ -82,7 +82,8 @@
       
     <h1 class="greeting"></h1>
 
-
+    <label for="dob">Date of Birth:</label>
+    <input type="date" id="dob" name="dob">
 
 </body>
 </html>
