Add progress bar fieldset, some other elements and applied styling

--- a/Fullstack JavaScript/intermediate-html-and-css/forms/form-element.html
+++ b/Fullstack JavaScript/intermediate-html-and-css/forms/form-element.html
@@ -140,6 +140,10 @@
 
     </fieldset>
 
+    <fieldset>
+        <legend>Progress: 75%</legend>
 
+        <progress max="100" value="75">75/100</progress>
+    </fieldset>
 </body>
 </html>
