--- a/Fullstack JavaScript/intermediate-html-and-css/forms/speaker-submission.html
+++ b/Fullstack JavaScript/intermediate-html-and-css/forms/speaker-submission.html
@@ -13,5 +13,32 @@
         <p> Want to speak at our fake conference?
             Fill out this form.                     </p>
     </div>
+
+    <form action="" method="GET" class="speaker-form">
+        <div class="form-row">
+            <label for="full-name">Name</label>
+            <input type="text" id="full-name" name="full-name">
+        </div>
+
+        <div class="form-row">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="you@example.com">
+        </div>
+
+        <fieldset class="legacy-form-row">
+            <legend>Type of Talk</legend>
+
+            <input type="radio" id="talk-type-1" name="talk-type" value="main-stage">
+            <label for="talk-type-1" class="radio-label">Main Stage</label>
+
+            <input type="radio" id="talk-type-2" name="talk-type" value="workshop" checked>
+            <label for="talk-type-2" class="radio-label">Workshop</label>
+
+            
+
+        </fieldset>
+
+    </form>
+
 </body>
 </html>
