--- a/Fullstack JavaScript/intermediate-html-and-css/forms/speaker-submission.html
+++ b/Fullstack JavaScript/intermediate-html-and-css/forms/speaker-submission.html
@@ -45,6 +45,12 @@
             </select>
         </div>
 
+        <div class="form-row">
+            <label for="abstract">Abstract</label>
+            <textarea id="abstract" name="abstract"></textarea>
+            <div class="instructions">Describe your talk in 500 words or less</div>
+        </div>
+
     </form>
 
 </body>
